// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error can override text 1`] = `
<div
  className="sc-dkzDqf iJAkzW"
  data-testid="error"
>
  <h3
    className="sc-gsnTZi jDaiGk"
  >
    An important heading
  </h3>
  Body text
  <div
    className="sc-hKMtZM bkppVE"
    data-testid="event-id"
  />
</div>
`;

exports[`Error matches snapshot 1`] = `
<div
  className="sc-dkzDqf iJAkzW"
  data-testid="error"
>
  <h3
    className="sc-gsnTZi jDaiGk"
  >
    Uh-oh, there's been a glitch
  </h3>
  We're not quite sure what went wrong. Restart your browser. If this doesn't solve the problem, visit our 
  <a
    href="https://help.openstax.org"
    target="_blank"
  >
    Support Center
  </a>
  .
  <div
    className="sc-hKMtZM bkppVE"
    data-testid="event-id"
  />
</div>
`;
